force-app/main/default/objects/FinancialAccount__c/FinancialAccount__c.object-meta.xml
<CustomObject>
    <description
  >A client&apos;s financial account, such as an investment account, bank account, or insurance policy.</description>
    <label>Financial Account</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Financial Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>