force-app/main/default/objects/FinancialAccount__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>Financial Account Number</description>
    <inlineHelpText>Financial Account Number</inlineHelpText>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>