force-app/main/default/objects/FinancialAccount__c/fields/ApplicationTemp__c.field-meta.xml
<CustomField>
    <fullName>ApplicationTemp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>FinancialAccountsTemp</relationshipName>
    <type>Lookup</type>
</CustomField>