force-app/main/default/objects/FinancialAccount__c/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <description>Credit Limit allowed for the account</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>