force-app/main/default/objects/FinancialAccount__c/fields/DateOpened__c.field-meta.xml
<CustomField>
    <fullName>DateOpened__c</fullName>
    <description>Date Opened</description>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>