force-app/main/default/objects/FinancialAccount__c/fields/DownPayment__c.field-meta.xml
<CustomField>
    <fullName>DownPayment__c</fullName>
    <description>Down Payment</description>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>