force-app/main/default/objects/FinancialAccount__c/fields/ExternalApplicationNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalApplicationNumber__c</fullName>
    <description>Field to save External Application Number</description>
    <label>External Application Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>