force-app/main/default/objects/FinancialAccount__c/fields/IsNewVehicle__c.field-meta.xml
<CustomField>
    <fullName>IsNewVehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether vehicle is new</description>
    <label>Is New Vehicle</label>
    <type>Checkbox</type>
</CustomField>