force-app/main/default/objects/FinancialAccount__c/fields/IsOverdraftAllowed__c.field-meta.xml
<CustomField>
    <fullName>IsOverdraftAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Overdraft Allowed</description>
    <label>Is Overdraft Allowed</label>
    <type>Checkbox</type>
</CustomField>