force-app/main/default/objects/FinancialAccount__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark As Primary Product for LOS system</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>