force-app/main/default/objects/FinancialAccount__c/fields/OtherPurpose__c.field-meta.xml
<CustomField>
    <fullName>OtherPurpose__c</fullName>
    <description>Other Purpose</description>
    <label>Other Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>