force-app/main/default/objects/FinancialAccount__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Purpose of the account</description>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Increased Limit</fullName>
            </value>
            <value>
                <fullName>ITIN Cash rewards</fullName>
            </value>
            <value>
                <fullName>ITIN Increase Limit</fullName>
            </value>
            <value>
                <fullName>Cash Rewards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>