force-app/main/default/objects/FinancialAccount__c/fields/ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>ServiceProvider__c</fullName>
    <description>Service Provider</description>
    <label>Service Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>