force-app/main/default/objects/FinancialAccount__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Product Selected Term</description>
    <label>Term</label>
    <length>20</length>
    <type>Text</type>
</CustomField>