force-app/main/default/objects/FinancialAccount__c/fields/VehicleMake__c.field-meta.xml
<CustomField>
    <fullName>VehicleMake__c</fullName>
    <description>Make of the vehicle</description>
    <label>Vehicle Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>