force-app/main/default/objects/FinancialAccount__c/fields/VehicleMileage__c.field-meta.xml
<CustomField>
    <fullName>VehicleMileage__c</fullName>
    <description>Total mileage of the vehicle if loan is being applied for used vehicle</description>
    <label>Vehicle Mileage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>