force-app/main/default/objects/FinancialAccount__c/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <description>Model of the vehicle</description>
    <label>Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>