force-app/main/default/objects/FinancialAccount__c/fields/VehicleTrim__c.field-meta.xml
<CustomField>
    <fullName>VehicleTrim__c</fullName>
    <description>Trim of the vehicle</description>
    <label>Vehicle Trim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>