force-app/main/default/objects/FinancialAccount__c/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <description>Type of the vehicle</description>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VehicleType</valueSetName>
    </valueSet>
</CustomField>