force-app/main/default/objects/FinancialAccount__c/fields/VehicleYear__c.field-meta.xml
<CustomField>
    <fullName>VehicleYear__c</fullName>
    <description>Vehicle year of manufacturing</description>
    <label>Vehicle Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>