force-app/main/default/objects/FinancialAccount__c/fields/Vin__c.field-meta.xml
<CustomField>
    <fullName>Vin__c</fullName>
    <description>Vehicle identification number (VIN)</description>
    <label>Vin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>