force-app/main/default/objects/FinancialAccount__c/recordTypes/Checking.recordType-meta.xml
<RecordType>
    <fullName>Checking</fullName>
    <active>true</active>
    <description>Checking Financial Account</description>
    <label>Checking</label>
</RecordType>