force-app/main/default/objects/FinancialAccount__c/recordTypes/ConsumerLoan.recordType-meta.xml
<RecordType>
    <fullName>ConsumerLoan</fullName>
    <active>true</active>
    <description>This record ID is for Home equity Loans</description>
    <label>Consumer Loan</label>
</RecordType>