force-app/main/default/objects/FinancialAccount__c/recordTypes/CreditCard.recordType-meta.xml
<RecordType>
    <fullName>CreditCard</fullName>
    <active>true</active>
    <description>Credit Card Products</description>
    <label>Credit Card</label>
</RecordType>