force-app/main/default/objects/FinancialAccount__c/recordTypes/Mortgage.recordType-meta.xml
<RecordType>
    <fullName>Mortgage</fullName>
    <active>true</active>
    <description>This record ID is for Home equity Loans</description>
    <label>Mortgage</label>
</RecordType>