force-app/main/default/objects/FinancialAccount__c/recordTypes/Savings.recordType-meta.xml
<RecordType>
    <fullName>Savings</fullName>
    <active>true</active>
    <description>Saving Financial Account</description>
    <label>Savings</label>
</RecordType>