force-app/main/default/objects/FinancialAccount__c/recordTypes/VehicleLoan.recordType-meta.xml
<RecordType>
    <fullName>VehicleLoan</fullName>
    <active>true</active>
    <description>This record ID is for Vehicle Loan</description>
    <label>Vehicle Loan</label>
</RecordType>